# GameOfLife

./: CMakeLists.txt  README.md  main.cpp
lib/sfeMovie/lib/: libavdevice.so.56  libavutil.so.54  libsfeMovie.so.2.0  libswresample.so.1  libswscale.so.3
resources/template_data_storage/: almost_knightship.txt  backrake2.txt  backrake3.txt  davegreenesminstrelcollection.rle  david_hilbert.txt  frothingpufferrake.rle  glider_shuttle.txt  gliderto2ec.rle  gunstar2.txt  hivenudger2.txt  lightweight_spaceship.txt  long_integral.txt  middleweight_spaceship.txt  monomerised_david_hilbert.rle  nurik.txt  p112pufferblinker.txt  p21bhassler.txt  p28blockpuffer.txt  p46gun2021.txt  piorbital3.txt  pufferfish_breeder.rle  pufferfish_rake.txt  pulsars.txt  quasar2.txt  quasar3.txt  scholar.txt  semi-snark.txt  sir_robin.txt  sirrobineater.rle  slow_puffer1.txt  snark.txt  snarkcatalystvariants.txt  spider.txt  statorlessp3.txt  switch_engine.txt  turinge_machine.rle  unconstructiblestilllife.txt  unconstructiblestilllife2.txt
src/: CMakeLists.txt
src/graphics/: CMakeLists.txt  buttons.cpp  buttons.hpp  event_handler.cpp  event_handler.hpp  grid.cpp  grid.hpp  grid_shell.hpp  main_menu.cpp  main_menu.hpp  music.hpp  user_interface.cpp  user_interface.hpp  user_interface_shell.hpp
src/logic/: CMakeLists.txt
src/logic/game_of_life/: for_user.hpp  game_construct.cpp  game_construct.hpp
src/logic/game_of_life/data_presentation/: CMakeLists.txt  cell.cpp  cell.hpp  cell_state.hpp  game_config.hpp  game_info.hpp  game_template.hpp  rule.cpp  rule.hpp  set_cells.hpp
src/logic/game_of_life/executor/: CMakeLists.txt  cache.cpp  cache.hpp  deleter.cpp  deleter.hpp  ideleter.hpp  iexecutor.hpp  multi_threaded_executor.cpp  multi_threaded_executor.hpp  single_threaded_executor.cpp  single_threaded_executor.hpp  state_machine.hpp
src/logic/game_of_life/executor/calculator/: icalculator.hpp  np_calculator.cpp  np_calculator.hpp  p_calculator.cpp  p_calculator.hpp
src/logic/game_of_life/templates/: CMakeLists.txt  parser.cpp  parser.hpp
test/: CMakeLists.txt  test.cpp  test_array.cpp
